WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304651
REGRESSION(
304792@main
?): [macOS iOS] Flaky crash in site-isolation tests
https://bugs.webkit.org/show_bug.cgi?id=304651
Summary
REGRESSION(304792@main?): [macOS iOS] Flaky crash in site-isolation tests
Marta Darbinyan
Reported
2025-12-23 12:09:52 PST
There are intermittenly crashing layout tests in site-isolation both in macOS and iOS. The tests are also flaky in EWS across different PRs. http/tests/site-isolation/history/add-iframes-and-navigate-mainframe.html http/tests/site-isolation/focus-click-navigation-activeElement.html http/tests/site-isolation/history/add-iframes-and-go-back.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x105840e74 WebKit::WebPageProxy::broadcastFrameTreeSyncData(IPC::Connection&, WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, WebCore::FrameTreeSyncSerializationData const&) 1 com.apple.WebKit 0x1052aa2d0 WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 2 com.apple.WebKit 0x105dd4c6c IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 3 com.apple.WebKit 0x1058ce084 WebKit::WebProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 4 com.apple.WebKit 0x10532e46c WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 5 com.apple.WebKit 0x105dce600 IPC::Connection::dispatchMessage(IPC::Decoder&) 6 com.apple.WebKit 0x105dce7c0 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 7 com.apple.WebKit 0x105dced68 IPC::Connection::dispatchIncomingMessages() 8 com.apple.JavaScriptCore 0x10a8e70c4 WTF::RunLoop::performWork() 9 com.apple.JavaScriptCore 0x10a8e8800 WTF::RunLoop::performWork(void*) 10 com.apple.CoreFoundation 0x191ac94b8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 /AppleInternal/Library/BuildRoots/b0c24a1e-bd47-11ef-bf9c-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1957 11 com.apple.CoreFoundation 0x191ac944c __CFRunLoopDoSource0 + 176 /AppleInternal/Library/BuildRoots/b0c24a1e-bd47-11ef-bf9c-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2001 12 com.apple.CoreFoundation 0x191ac91bc __CFRunLoopDoSources0 + 244 /AppleInternal/Library/BuildRoots/b0c24a1e-bd47-11ef-bf9c-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2038 13 com.apple.CoreFoundation 0x191ac7da8 __CFRunLoopRun + 828 /AppleInternal/Library/BuildRoots/b0c24a1e-bd47-11ef-bf9c-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2955 14 com.apple.CoreFoundation 0x191ac7414 CFRunLoopRunSpecific + 608 /AppleInternal/Library/BuildRoots/b0c24a1e-bd47-11ef-bf9c-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3420 15 com.apple.Foundation 0x192bfc868 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 /AppleInternal/Library/BuildRoots/558fc4d6-d024-11ef-9ee2-d285688f7a47/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:373 16 WebKitTestRunner 0x1047ac238 WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 17 WebKitTestRunner 0x10478c290 WTR::TestController::resetStateToConsistentValues(WTR::TestOptions const&, WTR::TestController::ResetStage)::$_13::operator()() const 18 WebKitTestRunner 0x10478b784 WTR::TestController::resetStateToConsistentValues(WTR::TestOptions const&, WTR::TestController::ResetStage) 19 WebKitTestRunner 0x1047b9cd8 WTR::TestInvocation::invoke() 20 WebKitTestRunner 0x104790d8c WTR::TestController::runTest(char const*) 21 WebKitTestRunner 0x104791170 WTR::TestController::runTestingServerLoop() 22 WebKitTestRunner 0x104785144 WTR::TestController::TestController(int, char const**) 23 WebKitTestRunner 0x104763098 main 24 dyld 0x19165f154 start + 2476 /AppleInternal/Library/BuildRoots/558fc4d6-d024-11ef-9ee2-d285688f7a47/Library/Caches/com.apple.xbs/Sources/dyld/dyld/dyldMain.cpp:1298 Test results:
https://build.webkit.org/#/builders/1702/builds/645
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=http%2Ftests%2Fsite-isolation%2Fhistory%2Fadd-iframes-and-go-back.html&test=http%2Ftests%2Fsite-isolation%2Ffocus-click-navigation-activeElement.html&test=http%2Ftests%2Fsite-isolation%2Fhistory%2Fadd-iframes-and-navigate-mainframe.html&test=http%2Ftests%2Fsite-isolation%2Fhistory%2Fadd-iframes-and-go-back.html&style=release
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-23 12:10:20 PST
<
rdar://problem/167097502
>
EWS
Comment 2
2025-12-23 12:57:56 PST
Test gardening commit
304909@main
(22206fe1f4d0): <
https://commits.webkit.org/304909@main
> Reviewed commits have been landed. Closing PR #55837 and removing active labels.
Kiet Ho
Comment 3
2026-01-08 10:57:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56270
EWS
Comment 4
2026-01-09 11:07:09 PST
Committed
305370@main
(5583c5d63e5e): <
https://commits.webkit.org/305370@main
> Reviewed commits have been landed. Closing PR #56270 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug