REGRESSION(304792@main?): [macOS iOS] Flaky crash in site-isolation tests rdar://167097502 https://bugs.webkit.org/show_bug.cgi?id=304651

Reviewed by Sihui Liu.

During navigation, it's possible for WebPageProxy::BroadcastFrameTreeSyncData
messages to be sent before navigation, but received after navigation. Hence
the included FrameIdentifier is no longer valid. Seems to be normal behavior,
so if the FrameIdentifier is not valid and doesn't correspond to a WebFrameProxy,
ignore the message instead of MESSAGE_CHECK.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::broadcastFrameTreeSyncData):
(WebKit::WebPageProxy::broadcastAllFrameTreeSyncData):

Canonical link: https://commits.webkit.org/305370@main